--- a/src/main/resources/templates/showDemands.html
+++ b/src/main/resources/templates/showDemands.html
@@ -32,7 +32,7 @@
                         <td th:text="${book.date}">0</td>
             <td>
                 <a th:href="@{'/deletedemands/' + ${book.id}}">Delete</a>
-                <a th:href="@{'/update/' + ${book.id}}">Update</a>
+                <a th:href="@{'/updateDemands/' + ${book.id}}">Update</a>
             </td>
         </tr>
     </tbody>
