--- a/src/main/resources/templates/addbooks.html
+++ b/src/main/resources/templates/addbooks.html
@@ -1,30 +1,81 @@
+
+
+
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Book</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+        }
+
+        form {
+            max-width: 400px;
+            margin: auto;
+            background-color: #f2f2f2;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
+
 <body>
 
-<form th:action="@{/addupdatebook}" method="post" th:object="${book}">
-    <input type="hidden" th:field="*{id}" />
-    
-    <input type="hidden" th:field="*{title}" />
+    <form th:action="@{/addupdatebook}" method="post" th:object="${book}">
+        <input type="hidden" th:field="*{id}" />
+
+        <input type="hidden" th:field="*{title}" />
     <input type="hidden" th:field="*{author}" />
     <input type="hidden" th:field="*{language}" />
     <input type="hidden" th:field="*{genre}" />
     <input type="hidden" th:field="*{number_of_pages}" />
     <input type="hidden" th:field="*{rate}" />
     <input type="hidden" th:field="*{date}" />
-        
-    <label>New Quantity </label>
-<input type="text" th:field="*{newQuantity}" /><br/>
 
-    <!-- Calculate updated quantity and store it in a hidden field -->
-<input type="hidden" th:field="*{quantity}"  /><br/>
+        <label>Old Quantity</label>
+        <input type="text" th:field="*{quantity}" readonly /><br />
 
-    <button type="submit">Update</button>
-</form>
+        <label>New Quantity</label>
+        <input type="text" th:field="*{newQuantity}" pattern="[0-9]*" title="Please enter only numeric values" /><br />
+
+        <button type="submit">Add Books</button>
+    </form>
 
 </body>
+
 </html>
